tests/bad/example-e07.rat
fn Main () -> Void {
  let a: Int = True;
  return;
}
